--- a/playbooks/roles/elasticsearch/tasks/main.yml
+++ b/playbooks/roles/elasticsearch/tasks/main.yml
@@ -97,18 +97,82 @@
 #  wait_for: "host={{ inventory_hostname }} port=9200"
 #  when: "'primary-servers' in group_names"
 
-- name: "Check for Bro mapping templates"
+- name: "Check for Bro base mapping template"
   uri:
     method: GET
-    url: "http://{{ inventory_hostname }}:9200/_template/bro_index"
+    url: "http://{{ inventory_hostname }}:9200/_template/bro_base"
   failed_when: false
-  register: bro_mapping
+  register: bro_baseMapping
   when: "'primary-servers' in group_names"
 
-- name: "Load Bro Elasticsearch mapping templates"
+- name: "Load Bro Elasticsearch base mapping template"
   uri:
-    body: "{{ lookup('file', 'es-bro-mappings.json')}}"
+    body: "{{ lookup('file', 'es-bro-base-mappings.json')}}"
     body_format: json
     method: PUT
-    url: "http://{{ inventory_hostname }}:9200/_template/bro_index"
-  when: "'primary-servers' in group_names and bro_mapping is defined and bro_mapping is defined and bro_mapping.status == '404'"
+    url: "http://{{ inventory_hostname }}:9200/_template/bro_base"
+  when: "'primary-servers' in group_names and bro_baseMapping is defined and bro_baseMapping.status == ''"
+
+  - name: "Check for Bro detection mapping template"
+    uri:
+      method: GET
+      url: "http://{{ inventory_hostname }}:9200/_template/bro_detection"
+    failed_when: false
+    register: bro_detectionMapping
+    when: "'primary-servers' in group_names"
+
+  - name: "Load Bro Elasticsearch detection mapping template"
+    uri:
+      body: "{{ lookup('file', 'es-bro-detection-mappings.json')}}"
+      body_format: json
+      method: PUT
+      url: "http://{{ inventory_hostname }}:9200/_template/bro_detection"
+    when: "'primary-servers' in group_names and bro_detectionMapping is defined and bro_detectionMapping.status == ''"
+
+      - name: "Check for Bro file mapping template"
+        uri:
+          method: GET
+          url: "http://{{ inventory_hostname }}:9200/_template/bro_file"
+        failed_when: false
+        register: bro_fileMapping
+        when: "'primary-servers' in group_names"
+
+      - name: "Load Bro Elasticsearch file mapping template"
+        uri:
+          body: "{{ lookup('file', 'es-bro-file-mappings.json')}}"
+          body_format: json
+          method: PUT
+          url: "http://{{ inventory_hostname }}:9200/_template/bro_file"
+        when: "'primary-servers' in group_names and bro_fileMapping is defined and bro_fileMapping.status == ''"
+
+          - name: "Check for Bro network template"
+            uri:
+              method: GET
+              url: "http://{{ inventory_hostname }}:9200/_template/bro_network"
+            failed_when: false
+            register: bro_detectionMapping
+            when: "'primary-servers' in group_names"
+
+          - name: "Load Bro Elasticsearch network mapping template"
+            uri:
+              body: "{{ lookup('file', 'es-bro-network-mappings.json')}}"
+              body_format: json
+              method: PUT
+              url: "http://{{ inventory_hostname }}:9200/_template/bro_network"
+            when: "'primary-servers' in group_names and bro_detectionMapping is defined and bro_detectionMapping.status == ''"
+
+              - name: "Check for Bro observations mapping template"
+                uri:
+                  method: GET
+                  url: "http://{{ inventory_hostname }}:9200/_template/bro_observations"
+                failed_when: false
+                register: bro_observationsMapping
+                when: "'primary-servers' in group_names"
+
+              - name: "Load Bro Elasticsearch observations mapping template"
+                uri:
+                  body: "{{ lookup('file', 'es-bro-observations-mappings.json')}}"
+                  body_format: json
+                  method: PUT
+                  url: "http://{{ inventory_hostname }}:9200/_template/bro_observations"
+                when: "'primary-servers' in group_names and bro_observationsMapping is defined and bro_observationsMapping.status == ''"
