--- a/playbooks/roles/elasticsearch/tasks/main.yml
+++ b/playbooks/roles/elasticsearch/tasks/main.yml
@@ -127,12 +127,12 @@
 #        register: bro_fileMapping
 #        when: "'primary-servers' in group_names"
 #
-#- name: "Load Bro Elasticsearch file mapping template"
-#        uri:
-#          body: "{{ lookup('file', 'es-bro-file-mappings.json')}}"
-#          body_format: json
-#          method: PUT
-#          url: "http://{{ inventory_hostname }}:9200/_template/bro_file"
+- name: "Load Bro Elasticsearch file mapping template"
+  uri:
+    body: "{{ lookup('file', 'es-bro-file-mappings.json')}}"
+    body_format: json
+    method: PUT
+    url: "http://{{ inventory_hostname }}:9200/_template/bro_file"
 #        when: "'primary-servers' in group_names and bro_fileMapping is defined and bro_fileMapping.status == ''"
 #
 #- name: "Check for Bro network template"
@@ -143,12 +143,12 @@
 #            register: bro_detectionMapping
 #            when: "'primary-servers' in group_names"
 #
-#- name: "Load Bro Elasticsearch network mapping template"
-#            uri:
-#              body: "{{ lookup('file', 'es-bro-network-mappings.json')}}"
-#              body_format: json
-#              method: PUT
-#              url: "http://{{ inventory_hostname }}:9200/_template/bro_network"
+- name: "Load Bro Elasticsearch network mapping template"
+  uri:
+    body: "{{ lookup('file', 'es-bro-network-mappings.json')}}"
+    body_format: json
+    method: PUT
+    url: "http://{{ inventory_hostname }}:9200/_template/bro_network"
 #            when: "'primary-servers' in group_names and bro_detectionMapping is defined and bro_detectionMapping.status == ''"
 #
 #- name: "Check for Bro observations mapping template"
@@ -159,10 +159,10 @@
 #                register: bro_observationsMapping
 #                when: "'primary-servers' in group_names"
 #
-#- name: "Load Bro Elasticsearch observations mapping template"
-#                uri:
-#                  body: "{{ lookup('file', 'es-bro-observations-mappings.json')}}"
-#                  body_format: json
-#                  method: PUT
+- name: "Load Bro Elasticsearch observations mapping template"
+  uri:
+    body: "{{ lookup('file', 'es-bro-observations-mappings.json')}}"
+    body_format: json
+    method: PUT
 #                  url: "http://{{ inventory_hostname }}:9200/_template/bro_observations"
 #                when: "'primary-servers' in group_names and bro_observationsMapping is defined and bro_observationsMapping.status == ''"
