removed bad comment

--- a/playbooks/roles/elasticsearch/tasks/main.yml
+++ b/playbooks/roles/elasticsearch/tasks/main.yml
@@ -164,5 +164,5 @@
     body: "{{ lookup('file', 'es-bro-observations-mappings.json')}}"
     body_format: json
     method: PUT
-#                  url: "http://{{ inventory_hostname }}:9200/_template/bro_observations"
+    url: "http://{{ inventory_hostname }}:9200/_template/bro_observations"
 #                when: "'primary-servers' in group_names and bro_observationsMapping is defined and bro_observationsMapping.status == ''"
