--- a/playbooks/roles/elasticsearch/tasks/main.yml
+++ b/playbooks/roles/elasticsearch/tasks/main.yml
@@ -94,8 +94,9 @@
 
 # TODO: This will not work because this port is not exposed
 - name: "Wait for Elasticsearch to become ready"
-  pause:
-    seconds: 60
+  wait_for:
+    host: "{{inventory_hostname}}"
+    port: 9200
 #- name: "Check for Bro base mapping template"
 #  uri:
 #    method: GET
