--- a/playbooks/roles/logstash/files/logstash-kafka-bro.conf
+++ b/playbooks/roles/logstash/files/logstash-kafka-bro.conf
@@ -136,8 +136,8 @@ output {
 
     elasticsearch {
       hosts => ["127.0.0.1"]
-      index => "bro-%{+YYYY.MM.dd}"
-      document_type => "%{[@meta][event_type]}"
+      index => "bro-%{[@meta][event_type]}-%{+YYYY.MM.dd}"
+      #document_type => "%{[@meta][event_type]}"
       manage_template => false
     }
   }
