--- a/playbooks/roles/logstash/files/logstash-kafka-bro.conf
+++ b/playbooks/roles/logstash/files/logstash-kafka-bro.conf
@@ -5,7 +5,7 @@ input {
     # Set this to one per kafka partition to scale up
     #consumer_threads => 4
     group_id => "bro_logstash"
-    bootstrap_servers => "127.0.0.1:9092"
+    bootstrap_servers => "rocksensor1.lan:9092"
     codec => json
     auto_offset_reset => "earliest"
   }
@@ -131,11 +131,11 @@ output {
     kafka {
      codec => json
      topic_id => "bro-clean"
-     bootstrap_servers => "127.0.0.1:9092"
+     bootstrap_servers => "rocksensor1.lan:9092"
     }
 
     elasticsearch {
-      hosts => ["127.0.0.1"]
+      hosts => ["rocksensor1.lan"]
       index => "bro-%{[@meta][event_type]}-%{+YYYY.MM.dd}"
       #document_type => "%{[@meta][event_type]}"
       manage_template => false
