--- a/playbooks/roles/logstash/defaults/main.yml
+++ b/playbooks/roles/logstash/defaults/main.yml
@@ -5,5 +5,5 @@ logstash_user: 'logstash'
 logstash_group: 'logstash'
 logstash_data_dir: "{{ rock_data_dir }}/logstash"
 logstash_config_dir: "/etc/logstash"
-logstash_pipeline_dir: "{{ logstash_config_dir }}/conf.d"
+logstash_pipeline_dir: "/usr/share/logstash/pipeline"
 logstash_log_dir: "/var/log/logstash"
