--- a/playbooks/roles/logstash/defaults/main.yml
+++ b/playbooks/roles/logstash/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
 
 
-logstash_user: 'logstash'
-logstash_group: 'logstash'
+logstash_user: 1000
+logstash_group: 1000
 logstash_data_dir: "{{ rock_data_dir }}/logstash"
 logstash_config_dir: "/etc/logstash"
 logstash_pipeline_dir: "{{ rocknsm_dir }}/logstash"
