--- a/playbooks/roles/logstash/files/pipelines.yml
+++ b/playbooks/roles/logstash/files/pipelines.yml
@@ -1,12 +1,12 @@
 - pipeline.id: bro
   queue.type: persisted
   queue.max_bytes: 2gb
-  path.config: "{{ logstash_pipeline_dir }}/kafka-bro.conf"
+  path.config: "/usr/share/logstash/pipeline/kafka-bro.conf"
 - pipeline.id: suricata
   queue.type: persisted
   queue.max_bytes: 2gb
-  path.config: "{{ logstash_pipeline_dir }}/kafka-suricata.conf"
+  path.config: "/usr/share/logstash/pipeline/kafka-suricata.conf"
 - pipeline.id: fsf
   queue.type: persisted
   queue.max_bytes: 2gb
-  path.config: "{{ logstash_pipeline_dir }}/kafka-fsf.conf"
+  path.config: "/usr/share/logstash/pipeline/kafka-fsf.conf"
