--- a/playbooks/roles/logstash/defaults/main.yml
+++ b/playbooks/roles/logstash/defaults/main.yml
@@ -4,6 +4,6 @@
 logstash_user: 1000
 logstash_group: 1000
 logstash_data_dir: "{{ rock_data_dir }}/logstash"
-logstash_config_dir: "/etc/logstash"
-logstash_pipeline_dir: "{{ rocknsm_dir }}/logstash"
+logstash_dir: "{{ rocknsm_dir }}/logstash"
+logstash_config_dir: "{{ logstash_dir }}/configs"
 logstash_log_dir: "/var/log/logstash"
