--- a/playbooks/roles/logstash/tasks/pipeline_configuration.yml
+++ b/playbooks/roles/logstash/tasks/pipeline_configuration.yml
@@ -4,7 +4,7 @@
 # copy pipeline configuration files
 - name: "Install Bro-Kafka configuration for Logstash"
   copy:
-    dest: "{{ logstash_pipeline_dir }}/kafka-bro.conf"
+    dest: "{{ logstash_config_dir }}/kafka-bro.conf"
     group: "{{ logstash_group }}"
     mode: 0754
     owner: "{{ logstash_user }}"
@@ -12,7 +12,7 @@
 
 - name: "Install Suricata-Kafka configuration for Logstash"
   copy:
-    dest: "{{ logstash_pipeline_dir }}/kafka-suricata.conf"
+    dest: "{{ logstash_config_dir }}/kafka-suricata.conf"
     group: "{{ logstash_group }}"
     mode: u+rw,g+rw,o+r
     owner: "{{ logstash_user }}"
@@ -20,7 +20,7 @@
 
 - name: "Install FSF-Kafka configuration for Logstash"
   copy:
-    dest: "{{ logstash_pipeline_dir }}/kafka-fsf.conf"
+    dest: "{{ logstash_config_dir }}/kafka-fsf.conf"
     group: "{{ logstash_group }}"
     mode: 0754
     owner: "{{ logstash_user }}"
@@ -28,7 +28,7 @@
 
 - name: "Copy pipelines.yml template"
   file:
-    dest: "{{ logstash_pipeline_dir }}/pipelines.yml"
+    dest: "{{ logstash_dir }}/pipelines.yml"
     group: "{{ logstash_group }}"
     mode: 0754
     owner: "{{ logstash_user }}"
