--- a/playbooks/roles/logstash/files/kafka-bro.conf
+++ b/playbooks/roles/logstash/files/kafka-bro.conf
@@ -135,7 +135,7 @@ output {
     }
 
     elasticsearch {
-      hosts => ["rocksensor1.lan"]
+      hosts => ["rockserver1.lan"]
       index => "bro-%{[@meta][event_type]}-%{+YYYY.MM.dd}"
       #document_type => "%{[@meta][event_type]}"
       manage_template => false
