--- a/playbooks/roles/logstash/files/kafka-suricata.conf
+++ b/playbooks/roles/logstash/files/kafka-suricata.conf
@@ -37,7 +37,7 @@ output {
     }
 
     elasticsearch {
-      hosts => ["rocksensor1.lan"]
+      hosts => ["rockserver1.lan"]
       index => "suricata-%{+YYYY.MM.dd}"
       manage_template => false
       document_type => "%{event_type}"
