--- a/playbooks/roles/logstash/files/kafka-fsf.conf
+++ b/playbooks/roles/logstash/files/kafka-fsf.conf
@@ -38,7 +38,7 @@ output {
     }
 
     elasticsearch {
-      hosts => ["rocksensor1.lan"]
+      hosts => ["rockserver1.lan"]
       index => "fsf-%{+YYYY.MM.dd}"
       manage_template => false
       document_type => "fsf"
