--- a/playbooks/roles/elasticsearch/tasks/main.yml
+++ b/playbooks/roles/elasticsearch/tasks/main.yml
@@ -62,22 +62,22 @@
     owner: root
     src: templates/es-jvm.options.j2
 
-- name: "Install ROCK Elasticsearch cleanup script"
-  template:
-    dest: /usr/local/bin/es_cleanup.sh
-    group: root
-    mode: 755
-    owner: root
-    src: templates/es_cleanup.sh.j2
+#- name: "Install ROCK Elasticsearch cleanup script"
+#  template:
+#    dest: /usr/local/bin/es_cleanup.sh
+#    group: root
+#    mode: 755
+#    owner: root
+#    src: templates/es_cleanup.sh.j2
 
-- name: "Set elasticsearch cleanup cron job"
-  cron:
-    cron_file: rocknsm_es_maintenance
-    hour: 0
-    job: "/usr/local/bin/es_cleanup.sh > /dev/null 2>&1"
-    minute: 1
-    name: "ES maintenance"
-    user: root
+#- name: "Set elasticsearch cleanup cron job"
+#  cron:
+#    cron_file: rocknsm_es_maintenance
+#    hour: 0
+#    job: "/usr/local/bin/es_cleanup.sh > /dev/null 2>&1"
+#    minute: 1
+#    name: "ES maintenance"
+#    user: root
 
 - name: "Setup elasticsearch service"
   template:
@@ -93,6 +93,35 @@
     name: elasticsearch
     state: started
     daemon-reload: yes
+
+- name: Install Signing Key for Curator
+  command: rpm --import https://packages.elastic.co/GPG-KEY-elasticsearch
+
+- name: Configure Repository
+  command: echo -e '[curator-5]\nname=CentOS/RHEL 7 repository for Elasticsearch Curator 5.x packages\nbaseurl=https://packages.elastic.co/curator/5/centos/7\npgkey=https://packages.elastic.co/GPG-KEY-elasticsearch\nenabled=1' >> /etc/yum.repos.d/curator.repo
+
+- name: Install Elasticsearch Curator and create config directory
+  command: yum install -y elasticsearch-curator
+  command: mkdir ~/.curator
+
+- copy:
+    src: /opt/rock/playbooks/files/curator.yml
+    dest: ~/.curator/curator.yml
+    mode: 0644
+
+- copy:
+    src: /opt/rock/playbooks/roles/elasticsearch/files/curator-actions.yml
+    dest: ~/.curator/curator-actions.yml
+    mode: 0644
+
+- name: "Set Elasticsearch Curator cron job"
+  cron:
+    cron_file: rocknsm_es_maintenance
+    hour: 0
+    job: "curator --config ~/.curator/curator.yml ~/.curator/curator-actions.yml > /dev/null 2>&1"
+    minute: 1
+    name: "Curator maintenance"
+    user: root
 
 #- name: "Restart haproxy service"
 #  systemd:
