--- a/playbooks/roles/elasticsearch/tasks/main.yml
+++ b/playbooks/roles/elasticsearch/tasks/main.yml
@@ -102,7 +102,7 @@
 
 - name: Install Elasticsearch Curator and create config directory
   command: yum install -y elasticsearch-curator
-  command: mkdir ~/.curator
+  file: path=~/.curator state=directory
 
 - copy:
     src: curator.yml
