Fixed client_id logstash bug

--- a/playbooks/roles/logstash/files/kafka-fsf.conf
+++ b/playbooks/roles/logstash/files/kafka-fsf.conf
@@ -6,7 +6,7 @@ input {
     # Set this to one per kafka partition to scale up
     #consumer_threads => 4
     group_id => "fsf_logstash"
-    client_id => "rockserver1"
+    client_id => "rockserver1-fsf"
     bootstrap_servers => "rocksensor1.lan:9092"
     codec => json
     auto_offset_reset => "earliest"
