--- a/playbooks/roles/logstash/files/kafka-bro.conf
+++ b/playbooks/roles/logstash/files/kafka-bro.conf
@@ -5,7 +5,7 @@ input {
     # Set this to one per kafka partition to scale up
     #consumer_threads => 4
     group_id => "bro_logstash"
-    client_id => "rockserver1"
+    client_id => "rockserver1-bro"
     bootstrap_servers => "rocksensor1.lan:9092"
     codec => json
     auto_offset_reset => "earliest"
