Set services to restart so containers would refresh
Changed kafka container

--- a/playbooks/roles/elasticsearch/tasks/main.yml
+++ b/playbooks/roles/elasticsearch/tasks/main.yml
@@ -74,7 +74,7 @@
   systemd:
     enabled: yes
     name: elasticsearch
-    state: started
+    state: restarted
     daemon-reload: yes
 
 - name: Install Signing Key for Curator
