--- a/playbooks/roles/kafka/tasks/main.yml
+++ b/playbooks/roles/kafka/tasks/main.yml
@@ -91,7 +91,7 @@
   systemd:
     name: 'kafka'
     enabled: yes
-    state: started
+    state: restarted
     daemon-reload: yes
 
 - name: 'Wait for Kafka service to start'
