--- a/playbooks/roles/kafka/tasks/main.yml
+++ b/playbooks/roles/kafka/tasks/main.yml
@@ -11,6 +11,13 @@
     baseurl: https://copr-be.cloud.fedoraproject.org/results/@rocknsm/rocknsm-2.1/epel-7-$basearch/
     gpgcheck: false
 
+- name: Open port in firewalld for Kafka
+  firewalld:
+    port: 9092/tcp
+    permanent: true
+    immediate: true
+    state: enabled
+
 - name: 'Create Kafka data directory'
   file:
     path: "{{ kafka_data_dir }}"
