--- a/playbooks/roles/logstash/files/kafka-suricata.conf
+++ b/playbooks/roles/logstash/files/kafka-suricata.conf
@@ -41,7 +41,7 @@ output {
       hosts => ["rockserver1.lan"]
       index => "suricata-%{+YYYY.MM.dd}"
       manage_template => false
-      document_type => "%{event_type}"
+      #document_type => "%{event_type}"
     }
   }
 }
