--- a/playbooks/roles/logstash/files/logstash-kafka-fsf.conf
+++ b/playbooks/roles/logstash/files/logstash-kafka-fsf.conf
@@ -1,11 +1,11 @@
+
 input {
   kafka {
-    topics => ["suricata-raw"]
-    add_field => { "[@metadata][stage]" => "suricataraw_kafka" }
+    topics => ["fsf-raw"]
+    add_field => { "[@metadata][stage]" => "fsfraw_kafka" }
     # Set this to one per kafka partition to scale up
     #consumer_threads => 4
-    group_id => "suricata_logstash"
-    client_id => "rockserver1-suricata"
+    group_id => "fsf_logstash"
     bootstrap_servers => "rocksensor1.lan:9092"
     codec => json
     auto_offset_reset => "earliest"
@@ -22,26 +22,26 @@ filter {
     remove_field => [ "kafka_topic" ]
   }
 
-  if [@metadata][stage] == "suricataraw_kafka" {
+  if [@metadata][stage] == "fsfraw_kafka" {
 
     # Set the timestamp
-    date { match => [ "timestamp", "ISO8601" ] }
+    date { match => [ "Scan Time", "ISO8601" ] }
     }
 }
 
 output {
-  if [@metadata][stage] == "suricataraw_kafka" {
+  if [@metadata][stage] == "fsfraw_kafka" {
     kafka {
      codec => json
-     topic_id => "suricata-clean"
+     topic_id => "fsf-clean"
      bootstrap_servers => "rocksensor1.lan:9092"
     }
 
     elasticsearch {
-      hosts => ["rockserver1.lan"]
-      index => "suricata-%{+YYYY.MM.dd}"
+      hosts => ["rocksensor1.lan"]
+      index => "fsf-%{+YYYY.MM.dd}"
       manage_template => false
-      #document_type => "%{event_type}"
+      #document_type => "fsf"
     }
   }
 }
