added stenographer to inventor

--- a/playbooks/inventory.yml
+++ b/playbooks/inventory.yml
@@ -64,6 +64,10 @@ all:
       children:
         master-servers:
 
+    stenographer:
+      children:
+        sensors:
+
     # Broad categories for convienience
     sensors:
 
